--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-AIDS
-<hr id=answer>
-获得性免疫缺陷综合症
-<head>
-<html>
+<head> 
+<meta charset="utf-8"> 
+<title>菜鸟教程(runoob.com)</title> 
+</head>
+<body>
+
+<p>一个来自文件夹中的图像:</p>
+<img src="/images/chrome.gif" alt="Google Chrome" width="33" height="32"><p>一个来自菜鸟教程的图像:</p>
+<img src="//www.runoob.com/images/logo.png" alt="runoob.com" width="336" height="69">
+
+</body>
+</html>
