--- a/21.html
+++ b/21.html
@@ -102,7 +102,7 @@
         <img src="https://mmbiz.qlogo.cn/mmbiz_png/aRSQkibkujLQsNqq1en4UsgPsCYY8v9xlEBa1qiatVHw2Tr05rolKRc2HH3xCm0aOIERG4ibnDaCDPibQtkge53XjA/0?&amp;wx_fmt=png" alt="" class="" data-ratio="0.6666666666666666" data-w="72" data-imgqrcoded="1">
       </section>
       <section style="text-align: left;margin-left: 6px;" data-mid="">
-        <p style="font-size: 20px; font-family: PingFangSC-Semibold, &quot;PingFang SC&quot;; font-weight: bold; line-height: 22px; letter-spacing: 1px;" data-mid="">{{问题}}
+        <p style="font-size: 20px; font-family: PingFangSC-Semibold, &quot;PingFang SC&quot;; font-weight: bold; line-height: 22px; letter-spacing: 1px;" data-mid="">民法的概念是什么？
           <mpchecktext contenteditable="false" id="1624871850778_0.43565165222940316">
           </mpchecktext>
         </p>
