--- a/21.html
+++ b/21.html
@@ -7,7 +7,7 @@
         <section style="display: flex;justify-content: flex-end;align-items: right;width: 100%;" data-mid="" mpa-from-tpl="t">
           <section style="display: flex;justify-content: flex-end;align-items: flex-end;flex-direction: column;" data-mid="" mpa-from-tpl="t">
             <section style="width: 10px;height: 8px;display: flex;justify-content: right;align-items: right;align-self: flex-end;margin-bottom: -8px;margin-top: 4px;background: #ffffff;z-index: 1;margin-right: -3px;" data-mid="" mpa-from-tpl="t">
-              <img src="https://mmbiz.qpic.cn/mmbiz_gif/X9SaMyWcMHNxeXEFX95ictyus2sNOw3vyzFbziaHyehUfGQJMZ1eHYKkZ7haph6cAUzGTF0Cq317B52jnxeCbB8g/0?wx_fmt=gif" alt="" class="data-mpa-template-img" data-ratio="1" data-w="42">
+              <img src="0.gif" alt="" class="data-mpa-template-img" data-ratio="1" data-w="42">
             </section>
             <section style="text-align: center;padding: 8px 13px 7px 15px;border-top: 1px solid #565656;border-right: 1px solid #565656;border-bottom: 1px dashed #565656;border-left: 1px dashed #565656;" data-mid="" mpa-from-tpl="t">
               <p style="font-size: 16px;font-family: PingFangSC-Semibold, PingFang SC;font-weight: bold;color: #565656;line-height: 22px;letter-spacing: 2px;" data-mid=""><div>
