--- a/21.html
+++ b/21.html
@@ -86,7 +86,7 @@
 </p>
       </section>
       <section style="width: 14px;height: 10px;display: flex;justify-content: center;align-items: center;background: #ffffff;margin-left: -7.1px;align-self: flex-start;margin-top: -17.1px;margin-bottom: 7px;z-index: 1;" data-mid="" mpa-from-tpl="t">
-        <img src="https://mmbiz.qpic.cn/sz_mmbiz_gif/lkClP1nMRFcOdV3wgl4RTQeP5eUwXyxvUsCRbYWhcvWpqAIiap0vy2vdtcVrIlE31dS5VeWUXk6onHQooLuttcw/0?wx_fmt=gif" alt="" class="data-mpa-template-img" data-ratio="1" data-w="42">
+        <img src="0.gif" alt="" class="data-mpa-template-img" data-ratio="1" data-w="42">
       </section>
     </section>
   </section>
@@ -99,7 +99,7 @@
   <section style="display: flex; justify-content: flex-start; align-items: center; width: 100%; padding-right: 6px; padding-left: 6px;" data-mid="">
     <section style="display: flex;justify-content: center;align-items: center;" data-mid="">
       <section style="width: 36px;height: 24px;" data-mid="">
-        <img src="https://mmbiz.qlogo.cn/mmbiz_png/aRSQkibkujLQsNqq1en4UsgPsCYY8v9xlEBa1qiatVHw2Tr05rolKRc2HH3xCm0aOIERG4ibnDaCDPibQtkge53XjA/0?&amp;wx_fmt=png" alt="" class="" data-ratio="0.6666666666666666" data-w="72" data-imgqrcoded="1">
+        <img src="0.png" alt="" class="" data-ratio="0.6666666666666666" data-w="72" data-imgqrcoded="1">
       </section>
       <section style="text-align: left;margin-left: 6px;" data-mid="">
         <p style="font-size: 20px; font-family: PingFangSC-Semibold, &quot;PingFang SC&quot;; font-weight: bold; line-height: 22px; letter-spacing: 1px;" data-mid="">民法的概念是什么？
